@@ -433,7 +433,7 @@ public class WikiEngine implements Engine {
         return ( List< T > )managers.entrySet().stream()
                                                .filter( e -> manager.isAssignableFrom( e.getKey() ) )
                                                .map( Map.Entry::getValue )
-                                               .collect( Collectors.toList() );
+                                               .toList();
     }
 
     /** {@inheritDoc} */
